fix(tables): align content to the left

--- a/framework/content/ecl-tables/_tables.scss
+++ b/framework/content/ecl-tables/_tables.scss
@@ -14,6 +14,7 @@ ECL tables
     background-color: transparent;
     color: $ecl-color-shade;
     font-weight: bold;
+    text-align: inherit;
   }
 
   td,
